# api-admin/api-spec.yaml
@@ -565,6 +565,37 @@ paths:
               schema:
                 $ref: '#/components/schemas/AdminCreateImageUploadUrlsResponseDTO'
 
+  /user/sendPushNotification:
+    post:
+      summary: 유저들에게 push notification을 보낸다.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                userIds:
+                  type: array
+                  items:
+                    type: string
+                notification:
+                  type: object
+                  properties:
+                    title:
+                      type: string
+                    body:
+                      type: string
+                    deepLink:
+                      type: string
+                  required:
+                    - body
+              required:
+                - userIds
+                - notification
+      responses:
+        '200': {}
+
 components:
   # Reusable schemas (data models)
   schemas:
